crates/sql-check-tests/tests/compile_fail/unknown_column.rs
//! Test that selecting a non-existent column fails with a clear error.

use sql_check_macros::query;

fn main() {
    let _q = query!("SELECT nonexistent_column FROM users");
}
