crates/sql-check-tests/tests/compile_fail/unknown_column.stderr
error: SQL validation error: Unknown column 'nonexistent_column' in table '<unknown>'
 --> tests/compile_fail/unknown_column.rs:6:21
  |
6 |     let _q = query!("SELECT nonexistent_column FROM users");
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
